# ai-stuff

./: README.md  bad_chat_gpt_clone.ipynb
bad_gpt_clone/: bad_gpt_clone.ipynb  csv_copy_thing.py  pyproject.toml
